tests/fixtures/invalid/len_3_args.py
# len() takes at most 1 argument, got 3
x = len(1, 1, 1)
